# conjugacy_bfs_characters

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  fixtures.yml  wheels.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: checkpoint.rs  error.rs  lib.rs  spectra.rs
crates/core/src/arith/: bounds.rs  exact.rs  mod.rs  modp.rs
crates/core/src/chars/: degrees.rs  memtable.rs  mn.rs  mod.rs  rimhook.rs
crates/core/src/driver/: cancel.rs  mod.rs  session.rs
crates/core/src/engine/: exact.rs  mod.rs  modular.rs
crates/core/src/partition/: gen.rs  index.rs  mod.rs  template.rs
crates/core/src/report/: mod.rs  schema.rs
crates/core/src/testing/: bruteforce.rs  catalog.rs  mod.rs  naive_mn.rs
crates/core/src/transform/: cpu.rs  mod.rs
crates/core/tests/: bruteforce.rs  checkpoint_resume.rs  driver.rs  fixtures.rs  invariants.rs  modular.rs  output.rs
crates/py/: Cargo.toml  README.md  pyproject.toml
crates/py/python/classdiam/: __init__.py  helpers.py
crates/py/src/: lib.rs
crates/py/tests/: conftest.py  test_helpers.py  test_resume.py  test_run.py  test_session.py
docs/: fixtures.md  kaggle.md  math_to_code.md  output_schema.md
docs/design/: 00-plan.md  01-architecture.md  02-numerics.md  03-testing.md  04-critique.md  README.md
fixtures/: adversarial_v1.json
fixtures/characters/: char_n01.json  char_n02.json  char_n03.json  char_n04.json  char_n05.json  char_n06.json  char_n07.json  char_n08.json  char_n09.json  char_n10.json  char_n11.json  char_n12.json  char_n13.json  char_n14.json  spot_n17.json  spot_n18.json  spot_n19.json  spot_n20.json  spot_n21.json  spot_n22.json
fixtures/degrees/: deg_n01.json  deg_n02.json  deg_n03.json  deg_n04.json  deg_n05.json  deg_n06.json  deg_n07.json  deg_n08.json  deg_n09.json  deg_n10.json  deg_n11.json  deg_n12.json  deg_n13.json  deg_n14.json  deg_n15.json  deg_n16.json  deg_n17.json  deg_n18.json  deg_n19.json  deg_n20.json  deg_n21.json  deg_n22.json  deg_n23.json  deg_n24.json  deg_n25.json  deg_n26.json  deg_n27.json  deg_n28.json  deg_n29.json  deg_n30.json
fixtures/golden/: n06_g2.json
notes/: character_method_cayley_diameters.md
tools/: find_adversarial.py  gen_fixtures.py
