[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/py"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = ""
authors = ["Andrei Smolensky <andrei.smolensky@gmail.com>"]

[workspace.dependencies]
classdiam-core = { path = "crates/core" }
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# default-features = false drops postcard's heapless integration, which
# pulls the unmaintained atomic-polyfill (RUSTSEC-2023-0089); checkpoints
# only need the alloc serializer.
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
crc32fast = "1.4"
blake3 = "1.5"
fixedbitset = "0.5"
smallvec = { version = "1.13", features = ["serde"] }
thiserror = "2"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
humantime = "2"
pyo3 = "0.29"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
proptest = "1"
criterion = "0.5"
sha2 = "0.10"

# Test/CI profile: release speed with debug assertions armed, so the spec's
# divisibility and nonnegativity asserts stay active in T1 runs.
[profile.ci]
inherits = "release"
debug-assertions = true
overflow-checks = true

[profile.release]
lto = "thin"
