[package]
name = "classdiam-cli"
description = "CLI for classdiam-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "classdiam"
path = "src/main.rs"

[dependencies]
classdiam-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
