[package]
name = "classdiam-cli"
description = "CLI for classdiam-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "classdiam"
path = "src/main.rs"

[dependencies]
# test-utils exposes the brute-force oracles that power `classdiam verify`.
classdiam-core = { workspace = true, features = ["test-utils"] }
clap = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
humantime = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
