[package]
name = "classdiam-core"
description = "Exact conjugacy-BFS (distances/layers/diameters) on symmetric-group Cayley graphs via characters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
num-bigint = { workspace = true, features = ["serde"] }
num-integer = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
crc32fast = { workspace = true }
blake3 = { workspace = true }
fixedbitset = { workspace = true, features = ["serde"] }
smallvec = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
sha2 = { workspace = true }
# Self-dependency so integration tests in tests/ see the `testing` oracle
# module (which is gated behind the test-utils feature).
classdiam-core = { path = ".", features = ["test-utils"] }

[features]
default = []
# Exposes the oracle/test-support code (brute-force BFS, naive MN, union catalog)
# to other crates' tests; always available to this crate's own tests.
test-utils = []
# Long-running tests are additionally marked #[ignore]; this feature gates
# compilation of the heaviest oracle paths.
slow-tests = []
